5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1575_1332.log
== TEST (2019-03-12 11:46:22) 
-- CODE:
aresta =5	
area =5 
 
print(round(area, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:52) 
-- CODE:
aresta =5	
area =5 
 
print(round(area, 1,5 3**0,5 5**2))
-- ERROR:
File "XXXX", line 4
    print(round(area, 1,5 3**0,5 5**2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:50) 
-- CODE:
aresta =5	
area =5 
 
print(round("area, 1,5 3**0,5 5**2"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area, 1,5 3**0,5 5**2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:54) 
-- CODE:
a =5	
area = 3/2*3**0,5(5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0,5(5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:01) 
-- CODE:
a =5	
area = 3/2*3*0,5(5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3*0,5(5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:16) 
-- CODE:
a =5	
area = 3/2* 3**0,5 (5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2* 3**0,5 (5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:28) 
-- CODE:
a =5	
area = 3/2* 3**0,5 (5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2* 3**0,5 (5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:50) 
-- CODE:
a =5	
area = 3/2* 3**1/2 (5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2* 3**1/2 (5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:09) 
-- CODE:
a =5	
area = 3/2* 3**1/2 (5**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2* 3**1/2 (5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:50) 
-- CODE:
a =5	
area = 3/2 * (3**1/2) *(5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:56) 
-- CODE:
a =5	
area = 3/2 * (3**1/2) *(5 ** 2)
 
print(round(area,4))
-- EXECUTION TIME:
0.16579
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:58) 
-- CODE:
a =5	
area = 3/2 * (3**1/2) *(5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:01:06) 
-- CODE:
a =5	
area = 3/2 * (3**1/2) * (5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:01:11) 
-- CODE:
a =5	
area = 3/2 * (3*1/2) * (5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:01:23) 
-- CODE:
a =5	
area = 3/2 * (3*1/2) * (5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:01:26) 
-- CODE:
a =5	
area = 3/2 * (3*1/2) * (5 ** 2)
 
print(round(area,4))
-- EXECUTION TIME:
0.226737
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:01:27) 
-- CODE:
a =5	
area = 3/2 * (3*1/2) * (5 ** 2)
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:02:21) 
-- CODE:
a =5	
area = 3/2 * (3**0.5) * (a ** 2)
 
print(round(area,4))
-- EXECUTION TIME:
0.142108
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
